2009-10-06   D. V. Wiebe <getdata@ketiltrout.net>  svn:315
	GetData-0.6.0rc1:

	* test/move_meta.c: Added.

	* m4/idl.m4: Add --with-idl-dlm-dir argument; needed by distcheck.

	* src/ascii.c: Explicitly cast edata to (FILE*) to fix compiler warnings.
	Reported by Josh Netterfield.

	* src/move.c (dirfile_move): Update metafield entries on parent move.

	* src/mod.c (dirfile_malter_spec): Fix "filename" in _GD_Tokenise call.

	* bindings/python/pygetdata.c: Add GETDATA_VERSION_SUFFIX to version tuple.

	* bindings/f77/fgetdata.c (_GDF_Callback): Fix debug message.

	* bindings/make_parameters.c: Moved from f77 subdir, and updated to handle
	both IDL and Python bindings as well.
	* bindings/python/pyconstants.c: Removed; now automatically generated by
	make_parameters.

	* bindings/python/test/callback.py: Clean-up after test.o
	
	* bindings/python/test/Makefile.am: Fix for rpath builds.

	* bindings/idl/test: Added.

	* bindings/idl/getdata.c (gdidl_clear_dirfile gdidl_cmp_to_c99
	gdidl_get_frameoffset gdidl_get_string): Added.

	* bindings/idl/getdata.c (gdidl_make_idl_entry): Initialise N_FIELDS and
	POLY_ORD.  Fix initialisation of CM, CB, CA.

	* bindings/idl/getdata.c (gdidl_read_idl_entry): Allow proper use for
	dirfile_alter, by conditionally handling missing structure elements.

	* bindings/idl/getdata.c (gdidl_convert_encoding): If the encoding is
	numeric, assume it's a proper GD_<foo>_ENCODED value.

	* bindings/idl/getdata.c (gdidl_dirfile_add_bit gdidl_dirfile_add_const
	gdidl_dirfile_add_lincom gdidl_dirfile_add_linterp gdidl_dirfile_add_multiply
	gdidl_dirfile_add_phase gdidl_dirfile_add_polynom gdidl_dirfile_add_sbit
	gdidl_dirfile_add_string): Fix dirfile_madd_<foo>() calls.

	* bindings/idl/getdata.c: IDL 6 appears to be adding INT type keyword
	paramters to the existing value, instead of replacing them.  Fix the
	bindings to allow for this.
	
	* bindings/idl/getdata.c (gdidl_dirfile_alter_lincom