@@ -1,3 +1,12 @@
+2009-10-07   D. V. Wiebe <getdata@ketiltrout.net>  svn:316
+	* configure.ac: Update interface version info.
+
+	* m4/python.m4: Fix no Python assignment.
+	* configure.ac: Don't compute BUILD_DATE if it's not needed.
+
+	* bindings/f77/test/big_test.f: Use constant length strings in array
+	constructors.
+
 2009-10-06   D. V. Wiebe <getdata@ketiltrout.net>  svn:315
 	GetData-0.6.0rc1:
 
